--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
+    <h1>Pokedex</h1>
+    <p>List of some Pokemon's stats</p>
     <ul class='pokemon-list'></ul>
-    <script src="js/scripts.js"></script>
+    <strong>
+      <script src="js/promise-polyfill.js"></script>
+      <script src="js/fetch-polyfill.js"></script>
+      <script src="js/scripts.js"></script>
+    </strong>  
   </body>
 </html>
