Added Modal to display Pokemon

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <h1>Pokedex</h1>
     <p>List of some Pokemon's stats</p>
     <ul class='pokemon-list'></ul>
+    <div class="pokemon-modal"></div>
     <strong>
       <script src="js/promise-polyfill.js"></script>
       <script src="js/fetch-polyfill.js"></script>
       <script src="js/scripts.js"></script>
-    </strong>  
+    </strong>
   </body>
 </html>
