--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
       <header class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Pokemon</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,12 +21,7 @@
           </ul>
         </div>
       </nav>
-    </header>        
-
-      <!-- Button trigger modal-->
-      <button type= "button" class= "btn btn-primary" data-toggle= "modal" data-target= "#exampleModal">
-        Launch demo Modal
-      </button>
+    </header>
 
       <!-- Modal -->
       <div class= "modal fade" id="exampleModal" tabindex= "-1" role= "dialog" aria-labelledby= "exampleModalLabel" aria-hidden= "true">
@@ -42,7 +37,7 @@
             </div>
             <div class= "modal-footer">
               <button type="button" class= "btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type= "button" class= "btn btn-primary">Save changes</button>
+              
             </div>
           </div>
         </div>
