--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
       <header class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Pokemon</a>
+        <a class="navbar-brand" href="#">Pokédex</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,7 +24,7 @@
     </header>
 
       <!-- Modal -->
-      <div class= "modal fade" id="exampleModal" tabindex= "-1" role= "dialog" aria-labelledby= "exampleModalLabel" aria-hidden= "true">
+      <div class= "modal fade" id="pokemon-Modal" tabindex= "-1" role= "dialog" aria-labelledby= "exampleModalLabel" aria-hidden= "true">
         <div class= "modal-dialog" role= "document">
           <div class= "modal-content">
             <div class= "modal-header">
@@ -37,7 +37,7 @@
             </div>
             <div class= "modal-footer">
               <button type="button" class= "btn btn-secondary" data-dismiss="modal">Close</button>
-              
+
             </div>
           </div>
         </div>
