--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
-      <header class="navbar navbar-expand-lg navbar-light bg-light">
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">>
         <a class="navbar-brand" href="#">Pokédex</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
